# chess

./: CMakeLists.txt  README.md  main.cpp  nextSteps.md
src/: .gitignore  ChessGameLoop.cpp  main.cpp
src/core/: board.cpp  board.hpp  move.cpp  move.hpp  moveGen.cpp  moveGen.hpp  utils.hpp
src/engine/: engine.cpp  engine.hpp  piece_tables.cpp  piece_tables.hpp
